...
  Widget build(BuildContext context, WidgetRef ref) {
    final entryDataAsync =
        ref.watch(trainingEntryDataProvider(templateLimit: 5));

    return Scaffold(
      appBar: AppBar(
        title: const Text('开始训练'),
        centerTitle: true,
      ),
      body: AsyncValueWidget<TrainingEntryData>(
        asyncValue: entryDataAsync,
        dataBuilder: (data) => ResponsivePage(
          child: _buildContent(context, ref, data),
...
